# libscep

./: CMakeLists.txt  README.md
debian/: changelog  control  copyright  rules
src/: CMakeLists.txt  message.c  message_static_functions.c
src/clients/cli/: CMakeLists.txt
